--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Tomer Kaftan, Nikita Kouevda, Daniel Wong
-# 2013/04/27
+# 2013/05/12
 
 # OS X Finder
 .DS_Store
@@ -7,6 +7,12 @@
 # Temporary Vim files
 *.swp
 
+# Project file
+fuse.iml
+
 # Compiled Python files
 *.pyc
 __pycache__
+
+# Circuit files
+*.cir
