--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
 # Tomer Kaftan, Nikita Kouevda, Daniel Wong
-# 2013/05/12
+# 2014/08/30
 
-# OS X Finder
-.DS_Store
-
-# Temporary Vim files
-*.swp
-
-# Project file
-fuse.iml
-
-# Compiled Python files
+# Python
 *.pyc
 __pycache__
 
-# Circuit files
+# Output
 *.cir
